# elastic-elgamal

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
benches/: basics.rs  instructions.rs  sharing.rs
benches/instructions/: main.baseline.json
elastic_elgamal/: all.html  enum.PublicKeyConversionError.html  enum.VerificationError.html  index.html  sidebar-items.js  struct.CandidateDecryption.html  struct.Ciphertext.html  struct.CiphertextWithValue.html  struct.CommitmentEquivalenceProof.html  struct.DiscreteLogTable.html  struct.Keypair.html  struct.LogEqualityProof.html  struct.PreparedRange.html  struct.ProofOfPossession.html  struct.PublicKey.html  struct.RangeDecomposition.html  struct.RangeProof.html  struct.RingProof.html  struct.SecretKey.html  struct.SumOfSquaresProof.html  struct.VerifiableDecryption.html
elastic_elgamal/app/: enum.ChoiceVerificationError.html  enum.QuadraticVotingError.html  index.html  sidebar-items.js  struct.ChoiceParams.html  struct.EncryptedChoice.html  struct.MultiChoice.html  struct.QuadraticVotingBallot.html  struct.QuadraticVotingParams.html  struct.SingleChoice.html  trait.ProveSum.html
elastic_elgamal/app/choice/: enum.ChoiceVerificationError.html  struct.ChoiceParams.html  struct.EncryptedChoice.html  struct.MultiChoice.html  struct.SingleChoice.html  trait.ProveSum.html
elastic_elgamal/app/quadratic_voting/: enum.QuadraticVotingError.html  struct.QuadraticVotingBallot.html  struct.QuadraticVotingParams.html
elastic_elgamal/decryption/: struct.CandidateDecryption.html  struct.VerifiableDecryption.html
elastic_elgamal/dkg/: enum.Error.html  index.html  sidebar-items.js  struct.Opening.html  struct.ParticipantCollectingCommitments.html  struct.ParticipantCollectingPolynomials.html  struct.ParticipantExchangingSecrets.html  struct.PublicInfo.html
elastic_elgamal/encryption/: struct.Ciphertext.html  struct.CiphertextWithValue.html  struct.DiscreteLogTable.html
elastic_elgamal/group/: index.html  sidebar-items.js  struct.Curve25519Subgroup.html  struct.Generic.html  struct.RandomBytesProvider.html  struct.Ristretto.html  trait.ElementOps.html  trait.Group.html  trait.ScalarOps.html
elastic_elgamal/group/curve25519/: struct.Curve25519Subgroup.html
elastic_elgamal/group/generic/: struct.Generic.html
elastic_elgamal/group/ristretto/: struct.Ristretto.html
elastic_elgamal/keys/: enum.PublicKeyConversionError.html  struct.Keypair.html  struct.PublicKey.html  struct.SecretKey.html
elastic_elgamal/proofs/: enum.VerificationError.html
elastic_elgamal/proofs/commitment/: struct.CommitmentEquivalenceProof.html
elastic_elgamal/proofs/log_equality/: struct.LogEqualityProof.html
elastic_elgamal/proofs/mul/: struct.SumOfSquaresProof.html
elastic_elgamal/sharing/: enum.Error.html  index.html  sidebar-items.js  struct.ActiveParticipant.html  struct.Dealer.html  struct.Params.html  struct.PublicKeySet.html
examples/: equivalence.rs  range.rs  voting.rs
search.desc/elastic_elgamal/: elastic_elgamal-desc-0-.js
search.index/: 0067ce486d5d.js  007b8640537d.js  00ce5e02c95a.js  00fa4c9c7ef6.js  033b1ab840f3.js  0527c2c5dc49.js  073c33669ed6.js  086e864702d6.js  0895ed7df6e4.js  09f68ffecdd1.js  0bb44bb9d50b.js  0c8465731d32.js  0d75f02c94e9.js  0e7b8c2d5d03.js  0e9473a5336f.js  0f3787ad54c1.js  0fd5e008b877.js  1334aa694868.js  140dd224b9ee.js  19251d871f22.js  19a3f108d2d4.js  1c9f0d5422c9.js  1cf8052dc222.js  1e6c5fc0cefc.js  1f26b35cdc6c.js  203a7097b805.js  20c543a8fc35.js  2199b100c197.js  2389a264b462.js  23967a93aff3.js  243ae6b8cc89.js  24fbc97e6b22.js  25c78c9d77a5.js  2882c05bbec4.js  2893474ec232.js  28dd9d4fda80.js  2aea2006600e.js  2b1a003751fe.js  2c7450f15de9.js  2ccb9897117f.js  (+75 more)
search.index/crateNames/: de4d4e267534.js
search.index/desc/: 81e23c8092e3.js
search.index/entry/: 2df8ca911c9e.js  b1d0befb9798.js
search.index/function/: 3f75d7477c98.js  5eb0986a71a2.js
search.index/generic_inverted_index/: 67aa240cf89c.js  7077cf6ba6cb.js
search.index/name/: 35c58b194d41.js  f52c064f8598.js
search.index/normalizedName/: 258ceac6ae6a.js  b6d4096daebd.js
search.index/path/: e3ad2d14cd17.js  e4daf413bdb7.js
search.index/type/: 5012db255942.js  ad918332ec29.js
src/: decryption.rs  dkg.rs  encryption.rs  group.rs  keys.rs  lib.rs  proofs.rs  serde.rs  sharing.rs
src/app/: choice.rs  mod.rs  quadratic_voting.rs
src/elastic_elgamal/: decryption.rs.html  dkg.rs.html  encryption.rs.html  lib.rs.html  serde.rs.html
src/group/: curve25519.rs  edwards.rs  generic.rs  mod.rs  ristretto.rs
src/keys/: impls.rs  mod.rs
src/proofs/: commitment.rs  log_equality.rs  mod.rs  mul.rs  possession.rs  range.rs  ring.rs
src/sharing/: key_set.rs  mod.rs  participant.rs
tests/: integration.rs  snapshots.rs
tests/integration/: basic.rs  dkg.rs  main.rs  sharing.rs
tests/snapshots/: snapshots__bool-encryption-bin-k256.snap  snapshots__bool-encryption-bin-ristretto.snap  snapshots__bool-encryption-k256.snap  snapshots__bool-encryption-ristretto.snap  snapshots__ciphertext-bin-k256.snap  snapshots__ciphertext-bin-ristretto.snap  snapshots__ciphertext-k256.snap  snapshots__ciphertext-ristretto.snap  snapshots__commitment-equiv-proof-k256.snap  snapshots__commitment-equiv-proof-ristretto.snap  snapshots__encrypted-choice-k256.snap  snapshots__encrypted-choice-ristretto.snap  snapshots__encrypted-multi-choice-k256.snap  snapshots__encrypted-multi-choice-ristretto.snap  snapshots__qv-ballot-k256.snap  snapshots__qv-ballot-ristretto.snap  snapshots__range-encryption-k256.snap  snapshots__range-encryption-ristretto.snap  snapshots__sum-sq-proof-k256.snap  snapshots__sum-sq-proof-ristretto.snap  snapshots__zero-encryption-bin-k256.snap  snapshots__zero-encryption-bin-ristretto.snap  snapshots__zero-encryption-k256.snap  snapshots__zero-encryption-ristretto.snap
trait.impl/zeroize/: trait.Zeroize.js
(+85 files in other folders)
