[package]
name = "elastic-elgamal"
version = "0.3.1"
authors = [
  "Alex Ostrovski <ostrovski.alex@gmail.com>",
  "Jiří Gavenda <jirigavenda98@gmail.com>",
  "Antonín Dufka <dufkan@gmail.com>",
  "Tiago Cerqueira <tiago.cerqueira7777@gmail.com>",
]
edition = "2024"
rust-version = "1.85"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/elastic-elgamal"
keywords = ["elgamal", "encryption", "zero-knowledge"]
categories = ["cryptography", "no-std"]
description = """\
Implementation of ElGamal encryption and related zero-knowledge proofs
with pluggable crypto backend
"""

[package.metadata.docs.rs]
features = ["serde"]
# Set `docsrs` to enable unstable `doc(cfg(...))` attributes.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Public dependencies (present in public API of the crate).
elliptic-curve = { version = "=0.14.0-rc.16", features = ["alloc", "sec1"] }

# Enables `Serialize` / `Deserialize` implementation for most types in the crate.
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }

# Private dependencies (not exposed via public APIs).
base64ct = { version = "1.8", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.16.0", optional = true }
merlin = { version = "3.0.0", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
sha2 = { version = "=0.11.0-rc.3", default-features = false }
subtle = { version = "2.6.1", default-features = false }

# Crypto backend to support Curve25519 prime subgroup and Ristretto255 group;
# a public dependency.
[dependencies.curve25519-dalek]
version = "=5.0.0-pre.1"
optional = true

# Crypto backend to support Curve25519 prime subgroup and Ristretto255 group;
# a public dependency. Alternative and mutually exclusive with `curve25519-dalek`.
[dependencies.curve25519-dalek-ng]
version = "4.1.1"
default-features = false
features = ["alloc"]
optional = true

[dev-dependencies]
# TODO: remove aux crates when/if `bulletproofs` is updated
bulletproofs = "5.0.0"
bulletproofs-curve = { package = "curve25519-dalek", version = "4.1.1" }
bulletproofs-rand-core = { package = "rand_core", version = "0.6" }

criterion = "0.7.0"
doc-comment = "0.3.4"
insta = { version = "1.43.2", features = ["yaml"] }
k256 = { version = "=0.14.0-rc.0", default-features = false, features = ["arithmetic"] }
rand = "0.9.2"
serde_json = "1.0"
clap = { version = "4.5.51", features = ["derive"] }
test-casing = "0.1.3"
version-sync = "0.9.2"
yab = { version = "0.1.0", git = "https://github.com/slowli/yab.git", rev = "efaa2fd6088a6ad52911806e56609dd29106c225" }

[features]
default = ["std", "curve25519-dalek"]
# Enables support of types from `std`, such as the `Error` trait.
std = []

[[bench]]
name = "basics"
path = "benches/basics.rs"
harness = false
required-features = ["default"]

[[bench]]
name = "sharing"
path = "benches/sharing.rs"
harness = false
required-features = ["default"]

[[bench]]
name = "instructions"
path = "benches/instructions.rs"
harness = false
required-features = ["default"]

[[example]]
name = "voting"
path = "examples/voting.rs"
required-features = ["default", "serde"]

[[example]]
name = "range"
path = "examples/range.rs"
required-features = ["default", "serde"]

[[example]]
name = "equivalence"
path = "examples/equivalence.rs"
required-features = ["default", "serde"]

[[test]]
name = "integration"
path = "tests/integration/main.rs"
required-features = ["default"]

[[test]]
name = "snapshots"
path = "tests/snapshots.rs"
required-features = ["default", "serde"]

# Speed up `k256` and `curve25519-dalek` arithmetic.
[profile.dev.package.k256]
opt-level = 2
[profile.dev.package.curve25519-dalek]
opt-level = 2
